--- a/RAG_Style/reports/av_num_tokens-prompt_table.tex
+++ b/RAG_Style/reports/av_num_tokens-prompt_table.tex
@@ -1,9 +1,24 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 gpt-4.1-2025-04-14 & 1 & - & 353.00 & - & - & - & - & - & 353.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & - & - & - & - & - & - \\
 llama_3.2_3b & 1 & - & 376.00 & - & - & - & - & - & 376.00 \\
+llama_3.2_3b & 10 & - & - & - & - & - & - & - & - \\
+llama_3.2_3b & all(-1) & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 1 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 10 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & all(-1) & - & - & - & - & 13993.00 & - & 13993.00 & - \\
+
+o4-mini-2025-04-16 & 1 & 510.50 & 480.50 & 469.00 & 486.67 \\
+o4-mini-2025-04-16 & 10 & 3573.00 & 3286.50 & 3144.00 & 3334.50 \\
+o4-mini-2025-04-16 & all(-1) & 10294.00 & 9545.00 & 9223.50 & 9687.50 \\
 
 Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 353.00 \\
 llama_3.2_3b & 1 & 376.00 \\
+o3-2025-04-16 & all(-1) & 13993.00 \\
+o4-mini-2025-04-16 & 1 & 486.67 \\
+o4-mini-2025-04-16 & 10 & 3334.50 \\
+o4-mini-2025-04-16 & all(-1) & 9687.50 \\
