--- a/RAG_Style/reports/rouge-1-recall_table.tex
+++ b/RAG_Style/reports/rouge-1-recall_table.tex
@@ -1,9 +1,23 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 gpt-4.1-2025-04-14 & 1 & - & 93.87 & - & - & - & - & - & 93.87 \\
+gpt-4.1-2025-04-14 & 10 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & - & - & - & - & - & - \\
 llama_3.2_3b & 1 & - & 54.50 & - & - & - & - & - & 54.50 \\
+llama_3.2_3b & 10 & - & - & - & - & - & - & - & - \\
+llama_3.2_3b & all(-1) & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 1 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 10 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & all(-1) & - & - & - & - & 70.00 & - & 70.00 & - \\
+o4-mini-2025-04-16 & 1 & 92.92 + 91.75 & 94.89 + 90.00 & 94.38 + 72.50 & 99.06 + 74.75 \\
+o4-mini-2025-04-16 & 10 & 88.00 + 88.21 & 78.21 + 75.00 & 75.37 + 72.50 & 80.53 + 78.57 \\
+o4-mini-2025-04-16 & all(-1) & 79.75 + 71.12 & 72.62 + 80.00 & 24.72 + 5.00 & 59.03 + 52.04 \\
 
 Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 93.87 \\
 llama_3.2_3b & 1 & 54.50 \\
+o3-2025-04-16 & all(-1) & 70.00 \\
+o4-mini-2025-04-16 & 1 & 84.41 \\
+o4-mini-2025-04-16 & 10 & 79.55 \\
+o4-mini-2025-04-16 & all(-1) & 55.54 \\
