--- a/RAG_Style/reports/rouge-l-recall_table.tex
+++ b/RAG_Style/reports/rouge-l-recall_table.tex
@@ -1,9 +1,23 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 gpt-4.1-2025-04-14 & 1 & - & 69.13 & - & - & - & - & - & 69.13 \\
+gpt-4.1-2025-04-14 & 10 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & - & - & - & - & - & - \\
 llama_3.2_3b & 1 & - & 47.58 & - & - & - & - & - & 47.58 \\
+llama_3.2_3b & 10 & - & - & - & - & - & - & - & - \\
+llama_3.2_3b & all(-1) & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 1 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 10 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & all(-1) & - & - & - & - & 70.00 & - & 70.00 & - \\
+o4-mini-2025-04-16 & 1 & 72.12 & 64.79 & 93.77 & 85.00 & 94.38 & 52.50 & 86.76 & 67.43 \\
+o4-mini-2025-04-16 & 10 & 63.67 & 62.12 & 77.58 & 75.00 & 75.37 & 72.50 & 72.21 & 69.87 \\
+o4-mini-2025-04-16 & all(-1) & 60.62 & 49.71 & 72.62 & 80.00 & 24.53 & 5.00 & 52.59 & 44.90 \\
 
 Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 69.13 \\
 llama_3.2_3b & 1 & 47.58 \\
+o3-2025-04-16 & all(-1) & 70.00 \\
+o4-mini-2025-04-16 & 1 & 77.09 \\
+o4-mini-2025-04-16 & 10 & 71.04 \\
+o4-mini-2025-04-16 & all(-1) & 48.75 \\
