--- a/RAG_Style/reports/EM_table.tex
+++ b/RAG_Style/reports/EM_table.tex
@@ -1,9 +1,23 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 gpt-4.1-2025-04-14 & 1 & - & 9.00 & - & - & - & - & - & 9.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & - & - & - & - & - & - \\
 llama_3.2_3b & 1 & - & 0.00 & - & - & - & - & - & 0.00 \\
+llama_3.2_3b & 10 & - & - & - & - & - & - & - & - \\
+llama_3.2_3b & all(-1) & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 1 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 10 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & all(-1) & - & - & - & - & 0.00 & - & 0.00 & - \\
+o4-mini-2025-04-16 & 1 & 0.00 & 0.00 & 0.00 & 5.00 & 0.00 & 2.50 & 0.00 & 2.50 \\
+o4-mini-2025-04-16 & 10 & 0.00 & 0.00 & 0.00 & 15.00 & 0.00 & 10.00 & 0.00 & 8.33 \\
+o4-mini-2025-04-16 & all(-1) & 0.00 & 0.00 & 0.00 & 20.00 & 0.00 & 2.50 & 0.00 & 7.50 \\
 
 Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 9.00 \\
 llama_3.2_3b & 1 & 0.00 \\
+o3-2025-04-16 & all(-1) & 0.00 \\
+o4-mini-2025-04-16 & 1 & 1.25 \\
+o4-mini-2025-04-16 & 10 & 4.17 \\
+o4-mini-2025-04-16 & all(-1) & 3.75 \\
