--- a/RAG_Style/reports/av_num_tokens-completion_table.tex
+++ b/RAG_Style/reports/av_num_tokens-completion_table.tex
@@ -1,9 +1,25 @@
 Experiment | arithmetic | wknow | temporal | Uni Avg | Multi Avg \\
 K | unispeaker & multispeaker | unispeaker & multispeaker | unispeaker & multispeaker |  |  \\
 gpt-4.1-2025-04-14 & 1 & - & 7.00 & - & - & - & - & - & 7.00 \\
+gpt-4.1-2025-04-14 & 10 & - & - & - & - & - & - & - & - \\
+gpt-4.1-2025-04-14 & all(-1) & - & - & - & - & - & - & - & - \\
 llama_3.2_3b & 1 & - & 34.00 & - & - & - & - & - & 34.00 \\
+llama_3.2_3b & 10 & - & - & - & - & - & - & - & - \\
+llama_3.2_3b & all(-1) & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 1 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & 10 & - & - & - & - & - & - & - & - \\
+o3-2025-04-16 & all(-1) & - & - & - & - & 3406.00 & - & 3406.00 & - \\
+
+
+o4-mini-2025-04-16 & 1 & 243.50 & 220.50 & 311.50 & 258.50 \\
+o4-mini-2025-04-16 & 10 & 705.00 & 662.50 & 966.00 & 777.83 \\
+o4-mini-2025-04-16 & all(-1) & 1309.50 & 1035.00 & 1452.00 & 1265.50 \\
 
 Average between unispeaker and multispeaker per k
 Experiment & K & Avg(Uni+Multi) \\
 gpt-4.1-2025-04-14 & 1 & 7.00 \\
 llama_3.2_3b & 1 & 34.00 \\
+o3-2025-04-16 & all(-1) & 3406.00 \\
+o4-mini-2025-04-16 & 1 & 258.50 \\
+o4-mini-2025-04-16 & 10 & 777.83 \\
+o4-mini-2025-04-16 & all(-1) & 1265.50 \\
